tests/functional/lang/eval-fail-bitXor-2.err.exp
error:
       … while calling the 'bitXor' builtin
         at /pwd/lang/eval-fail-bitXor-2.nix:1:1:
            1| builtins.bitXor 1 2.2
             | ^
            2|

       … while evaluating the second argument passed to builtins.bitXor

       error: expected an integer but found a float: 2.2
